[tool.poetry]
name = "jointbert-dev"
version = "0.1.0"
description = ""
authors = ["Brandon Konkle <brandon@konkle.us>"]

[tool.poetry.dependencies]
python = "^3.11"
torch = { url = "https://download.pytorch.org/whl/cu118/torch-2.0.0%2Bcu118-cp311-cp311-linux_x86_64.whl" }
transformers = "^4.27"
seqeval = "^1.2.2"
pytorch-crf = "^0.7.2"
sentencepiece = "^0.1.97"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
